# ebalistyka-app

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  MASTER_PROJECT.md  Makefile  MasterProject.md  PRIVACY_POLICY.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_2.md  TERMS.md  analysis_options.yaml  ffigen.yaml  l10n.yaml  pubspec.yaml
.github/workflows/: build-aab.yml  build-apk.yml  build-appimage.yml  (+8 more)
docs/: 1.REFACTORING_PLAN.md  2.REFACTORING_PLAN_2.md  3.OBJECTBOX_MIGRATION.md  4.PROFILES_CRUD_PLAN.md  5.RETICLES_AND_IMAGES.md  6.ALPHA_UX.md  7.1.Code_Quality.md  7.2.Localization.md  7.BETA_UX.md  7.POST_ALPHA_UX.md  ALPHA_UX.md  BALLISTICS_CONVENTIONS.md  BallisticsConventions.md  MasterProject.md  OBJECTBOX_MIGRATION.md  POST_ALPHA_UX.md  PROFILES_CRUD_PLAN.md  RECALC_REFACTORING.md  REFACTORING_PLAN.md  REFACTORING_PLAN_2.md  RETICLES_AND_IMAGES.md  RIFLE_SELECT_PLAN.md  notes.md  tmp.md
flatpak/: ebalistyka-wrapper.sh  io.github.o_murphy.ebalistyka.desktop  io.github.o_murphy.ebalistyka.metainfo.xml  io.github.o_murphy.ebalistyka.yml
hook/: build.dart
lib/: main.dart  router.dart
linux/: CMakeLists.txt
native/: CMakeLists.txt  bclibc_ffi.cpp  bclibc_ffi.h  bclibc_ffi.version
proto/: profedit.proto
scripts/: build-android-aab.sh  build-android.sh  build-ios.sh  build-macos.sh  export_key_store.sh  gen_reticles.sh  generate-android-keystore.sh  generate-ca.ps1  merge_collections.py  package-flatpak.sh  package-linux.sh  package-msix.ps1  package-snap.sh  package-windows.ps1  setup-linux-deps.sh  unused.py  verify-bundle.sh
snap/: snapcraft.yaml
test/: conditions_vm_test.dart  ffi_test.dart  home_vm_test.dart  home_widgets_test.dart  recalc_coordinator_test.dart  tables_screen_test.dart  tables_vm_test.dart  trajectory_table_test.dart  unit_test.dart  widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+392 files in other folders)
